# obs-browser

./: .clang-format  .travis.yml  BSUtils.cmake  CMakeLists.txt  FindBugSplat.cmake  FindCEF.cmake  README.md  appveyor.yml  browser-app.cpp  browser-app.hpp  browser-client.cpp  browser-client.hpp  browser-config.h.in  browser-mac-cpp-int.cpp  browser-mac-cpp-int.hpp  browser-mac.h  browser-mac.hpp  browser-mac.mm  browser-scheme.cpp  browser-scheme.hpp  browser-version.h  cef-headers.hpp  drm-format.cpp  drm-format.hpp  formatcode.sh  helper-Info.plist  linux-keyboard-helpers.hpp  macutil.mm  obs-browser-api-impl-panel.cpp  obs-browser-api-impl.cpp  obs-browser-api-impl.hpp  obs-browser-objc-int.hpp  obs-browser-plugin.cpp  obs-browser-source-audio.cpp  obs-browser-source.cpp  obs-browser-source.hpp
.github/workflows/: clang-format.yml  crowdin_upload.yml  update-crowdin-locales.yml
build-aux/: .run-format.zsh
cef-bootstrap/: cef-bootstrap-main.cpp  main.cpp
cef-isolation/: browser-handle.h  browser-handle.mm  browser-obs-bridge-mac.hpp  browser-obs-bridge-mac.mm  browser-render-handler.hpp  browser-render-handler.mm  browser-texture-mac.h  browser-texture-mac.mm  cef-isolated-client.h  cef-isolated-client.mm  main.mm  service-connection-delegate.h  service-connection-delegate.mm
cmake/: feature-panels.cmake  legacy.cmake  obs-browser-api.cmake  obs-browser-apiConfig.cmake.in  os-linux.cmake  os-macos.cmake  os-windows.cmake
cmake/macos/: Info-helper.plist.in  Info.plist.in
data/: dev_tools_discovery.html  draw_rect.effect  error.html
data/locale/: af-ZA.ini  ar-SA.ini  az-AZ.ini  ba-RU.ini  bg-BG.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-GB.ini  en-US.ini  eo-UY.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fa-IR.ini  fi-FI.ini  fil-PH.ini  fr-FR.ini  gd-GB.ini  gl-ES.ini  he-IL.ini  hi-IN.ini  hr-HR.ini  hu-HU.ini  hy-AM.ini  id-ID.ini  it-IT.ini  ja-JP.ini  ka-GE.ini  kab-KAB.ini  kmr-TR.ini  ko-KR.ini  ku-KMR.ini  lt-LT.ini  mn-MN.ini  ms-MY.ini  nb-NO.ini  (+24 more)
examples/Timer/: README.md  Timer.html
install/osx/: .gitignore  obs-browser-install.pkgproj  readme.rtf
install/osx/Uninstall.app/Contents/: Info.plist  document.wflow
lib/: obs-browser-api.hpp
nowide/: encoding_errors.hpp  encoding_utf.hpp  scoped_ptr.hpp  utf.hpp
obs-browser/: browser-load-handler.cpp  browser-load-handler.hpp  browser-manager-base.cpp  browser-manager-base.hpp  browser-obs-bridge-base.cpp  browser-obs-bridge-base.hpp  browser-render-handler.cpp  browser-render-handler.hpp  browser-source-base.cpp  browser-source-base.hpp  browser-source-listener-base.cpp  browser-source-listener-base.hpp  main-source.cpp  main.cpp
obs-browser-facade/: main.c
obs-browser-page/: obs-browser-page-main.cpp  obs-browser-page.exe.manifest
obs-browser-page-main/: obs-browser-page-main.cpp
obs-browser/apple/: browser-manager-mac.h  browser-manager-mac.mm  browser-source-listener-mac.h  browser-source-listener-mac.mm  browser-source-mac.h  browser-source-mac.mm  cef-isolation-service-manager.h  cef-isolation-service-manager.mm  cef-isolation-service.h  cef-isolation-service.mm  client-connection-delegate.h  client-connection-delegate.mm  graphics-helpers.c  graphics-helpers.h  texture-ref.hpp
obs-browser/wcui/: wcui-async-task-queue.cpp  wcui-async-task-queue.hpp
obs-browser/wcui/forms/: obs-browser-wcui-browser-dialog.html  wcui-browser-dialog.cpp  wcui-browser-dialog.hpp  wcui-browser-dialog.ui
panel/: browser-panel-client.cpp  browser-panel-client.hpp  browser-panel-internal.hpp  browser-panel-macos.m  browser-panel.cpp  browser-panel.hpp
shared/: base64.cpp  base64.hpp  browser-app.cpp  browser-app.hpp  browser-client.cpp  browser-client.hpp  browser-listener.hpp  browser-manager.hpp  browser-obs-bridge.hpp  browser-scheme.cpp  browser-scheme.hpp  browser-settings.hpp  browser-source.cpp  browser-source.hpp  browser-source.mm  browser-task.cpp  browser-task.hpp  browser-texture-reference.hpp  browser-texture.hpp  browser-types.h  browser-version.h  util.cpp  util.hpp
shared-apple/: browser-bridges.h  browser-bridges.mm  browser-settings-bridge.h  browser-settings-bridge.mm  cef-isolation.h  cef-logging.h
streamelements/: StreamElementsAnalyticsEventsManager.cpp  StreamElementsAnalyticsEventsManager.hpp  StreamElementsApiMessageHandler.cpp  StreamElementsApiMessageHandler.hpp  StreamElementsAsyncTaskQueue.cpp  StreamElementsAsyncTaskQueue.hpp  StreamElementsBandwidthTestClient.cpp  StreamElementsBandwidthTestClient.hpp  StreamElementsBandwidthTestManager.cpp  StreamElementsBandwidthTestManager.hpp  StreamElementsBrowserDialog.cpp  StreamElementsBrowserDialog.hpp  StreamElementsBrowserMessageHandler.hpp  StreamElementsBrowserSourceApiMessageHandler.cpp  StreamElementsBrowserSourceApiMessageHandler.hpp  StreamElementsBrowserWidget.cpp  StreamElementsBrowserWidget.hpp  StreamElementsBrowserWidgetManager.cpp  StreamElementsBrowserWidgetManager.hpp  StreamElementsCefClient.cpp  StreamElementsCefClient.hpp  StreamElementsConfig.cpp  StreamElementsConfig.hpp  StreamElementsControllerServer.cpp  StreamElementsControllerServer.hpp  StreamElementsCookieManager.cpp  StreamElementsCookieManager.hpp  StreamElementsCrashHandler.cpp  StreamElementsCrashHandler.hpp  StreamElementsExternalSceneDataProvider.hpp  StreamElementsExternalSceneDataProviderManager.hpp  StreamElementsExternalSceneDataProviderSlobsClient.cpp  StreamElementsExternalSceneDataProviderSlobsClient.hpp  StreamElementsFileSystemMapper.hpp  StreamElementsGlobalStateManager.cpp  StreamElementsGlobalStateManager.hpp  StreamElementsHotkeyManager.cpp  StreamElementsHotkeyManager.hpp  StreamElementsHttpClient.cpp  StreamElementsHttpClient.hpp  (+38 more)
streamelements/html/: error.html  loading.html
